--- a/systemd/user/lxqt-desktop.service
+++ b/systemd/user/lxqt-desktop.service
@@ -2,11 +2,10 @@
 Description=LXQt Desktop
 Documentation=https://github.com/lxqt/pcmanfm-qt
 After=graphical-session.target
+ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
 Type=exec
-# Repurpose XDG Autostart filtering
-ExecCondition=/usr/lib/systemd/systemd-xdg-autostart-condition "LXQt" ""
 ExecStart=/usr/bin/pcmanfm-qt --desktop --profile=lxqt
 Restart=on-failure
 Slice=session.slice
