--- a/systemd/user/lxqt-policykit-agent.service
+++ b/systemd/user/lxqt-policykit-agent.service
@@ -2,11 +2,10 @@
 Description=LXQt PolicyKit Handler
 Documentation=https://github.com/lxqt/lxqt-policykit
 After=graphical-session.target
+ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
 Type=exec
-# Repurpose XDG Autostart filtering
-ExecCondition=/usr/lib/systemd/systemd-xdg-autostart-condition "LXQt" ""
 ExecStart=/usr/libexec/lxqt-policykit-agent
 Restart=on-failure
 Slice=background-graphical.slice
