--- a/systemd/user/lxqt-runner.service
+++ b/systemd/user/lxqt-runner.service
@@ -2,11 +2,10 @@
 Description=LXQt Runner
 Documentation=https://github.com/lxqt/lxqt-runner
 After=graphical-session.target
+ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
 Type=exec
-# Repurpose XDG Autostart filtering
-ExecCondition=/usr/lib/systemd/systemd-xdg-autostart-condition "LXQt" ""
 ExecStart=/usr/bin/lxqt-runner
 Restart=on-failure
 Slice=background-graphical.slice
