--- a/systemd/user/lxqt-xscreensaver-autostart.service
+++ b/systemd/user/lxqt-xscreensaver-autostart.service
@@ -2,11 +2,10 @@
 Description=XScreenSaver
 Documentation=https://github.com/lxqt/lxqt-session
 After=graphical-session.target
+ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
 Type=exec
-# Repurpose XDG Autostart filtering
-ExecCondition=/usr/lib/systemd/systemd-xdg-autostart-condition "LXQt" ""
 ExecStart=/usr/bin/xscreensaver -no-splash
 Restart=on-failure
 Slice=session.slice
