Enable new services automatically

--- a/systemd/user/meson.build
+++ b/systemd/user/meson.build
@@ -15,6 +15,12 @@ foreach unit : systemd_user_units
     install_dir: SD_USER_DIR,
     install_mode: 'rw-r--r--',
   )
+
+  install_symlink(
+    unit,
+    install_dir: join_paths(SD_USER_DIR, 'graphical-session.target.wants'),
+    pointing_to: join_paths(SD_USER_DIR, unit),
+  )
 endforeach
 
 # NOTE: The override.conf files live in directories whose names contain a
