--- a/systemd/user/lxqt-globalkeyshortcuts.service
+++ b/systemd/user/lxqt-globalkeyshortcuts.service
@@ -2,6 +2,7 @@
 Description=LXQt Global Keyboard Shortcuts
 Documentation=https://github.com/lxqt/lxqt-globalkeys
 After=graphical-session.target
+PartOf=graphical-session.target
 ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
@@ -10,6 +11,7 @@ ExecStart=/usr/bin/lxqt-globalkeysd
 Restart=on-failure
 Slice=session.slice
 TimeoutStopSec=5s
+EnvironmentFile=-%t/uwsm/env_session.conf
 
 [Install]
 WantedBy=graphical-session.target
