--- a/systemd/user/lxqt-notifications.service
+++ b/systemd/user/lxqt-notifications.service
@@ -2,6 +2,7 @@
 Description=LXQt Notification Daemon
 Documentation=https://github.com/lxqt/lxqt-notificationd
 After=graphical-session.target
+PartOf=graphical-session.target
 ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
@@ -10,6 +11,7 @@ ExecStart=/usr/bin/lxqt-notificationd
 Restart=on-failure
 Slice=background-graphical.slice
 TimeoutStopSec=5s
+EnvironmentFile=-%t/uwsm/env_session.conf
 
 [Install]
 WantedBy=graphical-session.target
