--- a/systemd/user/lxqt-panel.service
+++ b/systemd/user/lxqt-panel.service
@@ -4,6 +4,7 @@ Documentation=https://github.com/lxqt/lxqt-panel
 StartLimitBurst=3
 StartLimitIntervalSec=60s
 After=graphical-session.target
+PartOf=graphical-session.target
 ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
@@ -12,6 +13,7 @@ ExecStart=/usr/bin/lxqt-panel
 Restart=on-failure
 Slice=session.slice
 TimeoutStopSec=40s
+EnvironmentFile=-%t/uwsm/env_session.conf
 
 [Install]
 WantedBy=graphical-session.target
