--- a/systemd/user/lxqt-xscreensaver-autostart.service
+++ b/systemd/user/lxqt-xscreensaver-autostart.service
@@ -2,6 +2,7 @@
 Description=XScreenSaver
 Documentation=https://github.com/lxqt/lxqt-session
 After=graphical-session.target
+PartOf=graphical-session.target
 ConditionEnvironment=LXQT_SESSION_MANAGER=uwsm
 
 [Service]
@@ -10,6 +11,7 @@ ExecStart=/usr/bin/xscreensaver -no-splash
 Restart=on-failure
 Slice=session.slice
 TimeoutStopSec=5s
+EnvironmentFile=-%t/uwsm/env_session.conf
 
 [Install]
 WantedBy=graphical-session.target
